# staking-draft

./: Cargo.toml  README.md
src/: entrypoint.rs  error.rs  lib.rs
src/assertions/: account.rs
src/instructions/: deposit.rs  initialize_staking_pool.rs  mod.rs  withdraw.rs
