[package]
name = "staking-draft"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base58 = { version = "^0.2" }
borsh = { version = "^0.10" }
pinocchio = "0.8.4"
pinocchio-pubkey = { version = "^0.2" }
pinocchio-log = { version = "^0.3" }
solana-program = "2.2.1"
shank = { version = "^0.4" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
strum = { version = "^0.27", features = ["derive"] }
thiserror-no-std = { version = "^2.0" }
